plugins {
    id 'fabric-loom' version '1.6.12'
    id 'maven-publish'
}

version = "${project.minecraft_version}-${project.mod_version}"
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

repositories {
}

// Loom 会把 fabric-loader 自带的 MixinExtras 一并塞进注解处理器路径，而它与 Lombok 冲突：
// 冲突时 Lombok 静默失效——所有 @Getter/@Slf4j/@RequiredArgsConstructor 都不生成，
// 但编译本身照常"成功"，只在别处报一堆找不到符号。MixinExtras 运行期由 Loader 提供即可。
configurations.annotationProcessor {
    exclude group: 'io.github.llamalad7'
}

loom {
    mods {
        "thatskyinteractions" {
            sourceSet sourceSets.main
        }
    }

    runs {
        client2 {
            client()
            configName = "Client2"
            runDir "run2"
            programArgs "--username", "Dev2"
        }
    }
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    // 官方 Mojang 映射：与 26.x 同名，业务代码不必改名
    mappings loom.officialMojangMappings()
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

    implementation files('libs/veynir-core-1.2.1.jar')

    compileOnly "org.jspecify:jspecify:1.0.0"
    compileOnly "org.projectlombok:lombok:1.18.48"
    annotationProcessor "org.projectlombok:lombok:1.18.48"
}

sourceSets.main.resources {
    srcDir('src/generated/resources')
    exclude("**/*.bbmodel")
    exclude("src/generated/**/.cache")
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
}

java {
    withSourcesJar()
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

tasks.withType(JavaCompile).configureEach {
    it.options.encoding = "UTF-8"
    it.options.release = 17
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.base.archivesName.get()}" }
    }

    from(zipTree("libs/veynir-core-1.2.1.jar")) {
        exclude "META-INF/MANIFEST.MF"
    }
}
